--- a/images/styles.css
+++ b/images/styles.css
@@ -8,4 +8,4 @@ html, body, h1 {
 }
 
 body{padding: 1em; font-family: 'Wire One', sans-serif;}
-h1{font-size: 144px; font-weight: 400; text-align: center; color: #eee;}
+h1{font-size: 144px; text-align: center; color: #eee;}
